# high-signal

./: .gitignore  PROJECT_STATUS.md  README.md  SPEC.md  agents.md  package.json  pnpm-lock.yaml
.github/workflows/: backfill.yml  cron-backtest.yml  cron-equities.yml  cron-ingest.yml  cron-markets.yml  cron-publish.yml  deploy-annotation.yml  deploy-api.yml  (+1 more)
data/: equities-snapshot.jsonl  personal-brief-snapshots.jsonl  personal-complaint-clusters.jsonl  personal-market-refresh.jsonl  personal-reel-briefs.jsonl  personal-report-index.json  product-flow-refresh.jsonl
docs/: data-service-boundary.md  ingest-runbook.md  source-coverage.md
plans/: 0006-agent-evaluation-attention-layer.md  0007-highsignal-lab-substrate.md  0008-signal-provenance-editor.md  0009-brief-distribution-and-subscription-routing.md  0010-entity-watchlists-and-impact-chains.md  0011-openlens-visibility-steal-list.md
python/lab/: README.md  docker-compose.yml  pyproject.toml  schema.sql
python/lab/src/high_signal_lab/: __init__.py  cluster.py  db.py  embed.py  extract_entities.py  github_trending.py  ingest.py  materialize.py  score.py  server.py  summarize.py
scripts/: auto-publish-drafts.ts  auto-publish-rules.test.ts  auto-publish-rules.ts  brief-delivery.test.ts  build-daily-source-refreshes.ts  build-known-tickers.ts  claim-provenance.test.ts  daily-range.test.ts  daily-requirements.test.ts  daily-source-audit.test.ts  openlens-visibility.test.ts  personal-command-brief.ts  seed-daily-source-history.ts  sync-signals.lib.ts  sync-signals.test.ts  sync-signals.ts  watchlist-impact.test.ts
(+171 files in other folders)
