[project]
name = "high-signal-lab"
version = "0.1.0"
description = "Local-first Postgres substrate for High Signal (plan 0007)."
requires-python = ">=3.11"
dependencies = [
  "psycopg[binary]>=3.2",
  "httpx>=0.27",
  "trafilatura>=1.12",
  "lxml>=5.3",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "tenacity>=9.0",
]

[project.optional-dependencies]
embeddings = [
  "sentence-transformers>=3.0",
  "numpy>=2.0",
]
entities = [
  "gliner>=0.2.0",
]

[project.scripts]
lab-ingest = "high_signal_lab.ingest:main"
lab-score = "high_signal_lab.score:main"
lab-server = "high_signal_lab.server:main"
lab-github-trending = "high_signal_lab.github_trending:main"
lab-embed = "high_signal_lab.embed:main"
lab-materialize = "high_signal_lab.materialize:main"
lab-cluster = "high_signal_lab.cluster:main"
lab-entities = "high_signal_lab.extract_entities:main"
lab-summarize = "high_signal_lab.summarize:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/high_signal_lab"]
